--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "flexible": "^0.1.20",
+    "lib-flexible": "^0.3.2",
+    "mint-ui": "^2.2.13",
+    "postcss-px2rem": "^0.3.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
