--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lib-flexible": "^0.3.2",
     "mint-ui": "^2.2.13",
     "postcss-px2rem": "^0.3.0",
+    "vant": "^2.1.3",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
@@ -22,6 +23,7 @@
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-service": "^3.10.0",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-import": "^1.12.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "vue-template-compiler": "^2.6.10"
